--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">RP Portfolio</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Doubt Forum</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -13,7 +13,7 @@
               <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'home' %}">Blog</a>
+              <a class="nav-link" href="{% url 'tag_list' %}">Subjects</a>
             </li>
           </ul>
         </div>
