--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<style type="text/css">
-  body { background: black !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
-</style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #563d7c;">
+    <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">Doubt Forum</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,7 +24,7 @@
 
 </nav>
 
-<div class="container text-white">
+<div class="container-fluid">
     {% block page_content %}{% endblock %}
 </div>
 
