Added search feature and UI elements

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_doubt' %}">Post a Doubt</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'search_doubt' %}">Search</a>
+              </li>
             </ul>
           </div>
       </div>
