--- a/templates/addDoubt.html
+++ b/templates/addDoubt.html
@@ -3,7 +3,11 @@
 {% extends "base.html" %}
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
-    <h1>Your Doubt</h1>
+    <hr>    
+        <div class="page-header text-center mt-3">
+            <h1 class="display-4">Your Doubt</h1>
+        </div>
+    <hr>
     <form action="{% url 'add_doubt' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
