--- a/templates/doubtComplete.html
+++ b/templates/doubtComplete.html
@@ -2,46 +2,55 @@
 <meta charset="utf-8"/>
 {% extends "base.html" %}
 {% block page_content %}
-<div class="col-md-8 offset-md-2">
-    <h1>{{ doubt.title }}</h1>
+<div class="col-md-12">
+    <h3 class="mt-3"><a href="{% url 'doubt_complete' doubt.pk%}" class="text-dark">{{ doubt.title }}</a></h3>
     <small>
-        {{ doubt.created_on.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for tag in doubt.tags.all %}
+        {{ doubt.created_on.date }} |&nbsp; {{ doubt.author }} |&nbsp;
+        Subject:&nbsp;
+        {% for tag in doubt.subject.all %}
         <a href="{% url 'tagged_doubts' tag.name %}">
             {{ tag.name }}
         </a>&nbsp;
         {% endfor %}
-    </small>
-    <p>{{ doubt.body | linebreaks }}</p>
-    {% if doubt.link is null or blank%}
-    {% else %}
-        <a href="{{doubt.link}}" class="card-link text-info">Reference Link</a>
-    {% endif %}
-    <button href="#Bar" class="btn btn-primary" data-toggle="collapse">Add a Comment</button>
-    <div id="Bar" class="collapse in">
-        <h3>Leave a comment:</h3>
-        <form action="{% url 'doubt_complete' doubt.pk%}" method="POST" class="justify-content-between">
-            {% csrf_token %}
-            <div class="form-group">
-                {{ form.author }}
+    </small>    
+    <hr/>
+    
+        <div class="card text-dark bg-light mb-3">
+            <div class="card-body">
+                <p class="card-text">{{ doubt.body | linebreaks }}</p>
+            
+                {% if doubt.link is null or blank%}
+                {% else %}
+                    <p><a href="{{doubt.link}}" class="card-link text-info">Reference Link</a>&nbsp;</p>    
+                {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.body }}
-            </div>
-            <button type="submit" class="btn btn-outline-primary ml-auto">Comment</button>
-        </form>
-    </div>
-    <!-- <hr/> -->
-    <h3 class="display-6 pt-3">Comments:</h3>
-    {% for comment in comments %}
-    <div class="card mb-3">
-        <div class="card-body">
-            <h7 class="card-title">On {{comment.created_on.date }}&nbsp;
-                <b>{{ comment.author }}</b> wrote:</h7>
-            <p class="card-text">{{ comment.body }}...</p>
         </div>
-    </div>
+        <div class="col-md-12">
+        <button href="#Bar" class="btn btn-primary" data-toggle="collapse">Add a Comment</button>
+        <div id="Bar" class="collapse in">
+            <h3>Leave a comment:</h3>
+            <form action="{% url 'doubt_complete' doubt.pk%}" method="POST" class="justify-content-between">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{ form.author }}
+                </div>
+                <div class="form-group">
+                    {{ form.body }}
+                </div>
+                <button type="submit" class="btn btn-outline-primary ml-auto">Comment</button>
+            </form>
+        </div>
+        <!-- <hr/> -->
+        <h3 class="display-6 pt-3">Comments:</h3>
+        {% for comment in comments %}
+        <div class="card text-dark border-info bg-light mb-3">
+            <div class="card-header"><h7 class="card-title">On {{comment.created_on.date }}&nbsp;
+                <b>{{ comment.author }}</b> wrote:</h7></div>
+            <div class="card-body">
+                <p class="card-text">{{ comment.body | linebreaks }}</p>
+            </div>
+        </div>
     {% endfor %}
+</div>
 </div>
 {% endblock %}
