--- a/templates/searchResults.html
+++ b/templates/searchResults.html
@@ -5,19 +5,19 @@
     <div class="col-md-12">
         <hr>    
         <div class="page-header text-center mt-3">
-            <h3>Search Results</h3>
+            <h1 class="display-4">Search Results</h1>
             <h6>{{ query }}</h6>
         </div>
-        
         <hr>
+        
         {% for doubt in doubts %}
-        <div class="card mb-3">
+        <div class="card border-dark bg-light mb-3">
             <div class="card-body">
                 <h5 class="card-title"><a href="{% url 'doubt_complete' doubt.pk%}" class="text-secondary">{{ doubt.title }}</a></h5>
                 <h6 class="card-subtitle mb-2 text-muted">
                     {{ doubt.created_on.date }} |&nbsp; {{ doubt.author }} </h6>
                     Subject:&nbsp;
-                    {% for tag in doubt.tags.all %}
+                    {% for tag in doubt.subject.all %}
                     <a href="{% url 'tagged_doubts' tag.name %}" class="text-info">
                         {{ tag.name }}
                     </a>&nbsp;
