--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
               </li>
               <li>
                 <a class="nav-link waves-effect waves-light active" href="/admin/">
-                  <i class="bi bi-person-circle"></i>
+                  <i class="bi bi-person-circle"></i> Admin
               </a>
               </li>
             </ul>
