--- a/templates/home.html
+++ b/templates/home.html
@@ -29,11 +29,9 @@
                 <h6 class="card-subtitle mb-2 text-muted">
                     {{ doubt.created_on.date }} |&nbsp; {{ doubt.author }} </h6>
                     Subject:&nbsp;
-                    {% for tag in doubt.subject.all %}
-                    <a href="{% url 'tagged_doubts' tag.name %}" class="text-info">
-                        {{ tag.name }}
+                    <a href="{% url 'tagged_doubts' doubt.subject.name %}">
+                      {{ doubt.subject.name }}
                     </a>&nbsp;
-                    {% endfor %}
                 
                 <p class="card-text">{{ doubt.body | slice:":400" }}...</p>
             </div>
