Added login for students and professors

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
     {% extends "base.html" %}
+    <title>{% block title %}Home{% endblock %}</title>
     {% block page_content %}
     <div
           class="p-5 m-1 text-center bg-image border border-secondary border-5"
