--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <meta charset="utf-8"/>
+  <title>{% block title %}Doubt Forum{% endblock %}</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,9 +32,23 @@
                 <a class="nav-link active" href="{% url 'doubt_sessions' %}">Doubt Sessions</a>
               </li>
               <li>
-                <a class="nav-link waves-effect waves-light active" href="/admin/">
-                  <i class="bi bi-person-circle"></i> Admin
-              </a>
+                {% if user.is_authenticated %}
+                <a class="nav-link active" href="{% url 'user_doubts' %}">My Doubts</a>
+                {% endif %}
+              </li>
+              <li>
+                {% if user.is_authenticated and user.is_staff%}
+                <a class="nav-link waves-effect waves-light active" href="/admin/"> 
+                  <i class="bi bi-person-circle"></i> Faculty
+                </a>
+                {% endif %}
+              </li>
+              <li>
+                {% if user.is_authenticated %}
+                <a class="nav-link active" href="{% url 'logout' %}">Log Out</a>
+                {% else %}
+                <a class="nav-link active" href="{% url 'login' %}">Log In</a>
+                {% endif %}
               </li>
             </ul>
           </div>
