--- a/templates/doubtComplete.html
+++ b/templates/doubtComplete.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
 {% extends "base.html" %}
+<title>{% block title %}{{ doubt.title }}{% endblock %}</title>
 {% block page_content %}
 <div class="col-md-12">
     <h3 class="mt-3"><a href="{% url 'doubt_complete' doubt.pk%}" class="text-dark">{{ doubt.title }}</a></h3>
@@ -26,17 +27,19 @@
         <div class="col-md-12">
         <button href="#Bar" class="btn btn-primary" data-toggle="collapse">Add a Comment</button>
         <div id="Bar" class="collapse in">
+            {% if user.is_authenticated %}
             <h3>Leave a comment:</h3>
             <form action="{% url 'doubt_complete' doubt.pk%}" method="POST" class="justify-content-between">
                 {% csrf_token %}
-                <div class="form-group">
-                    {{ form.author }}
-                </div>
                 <div class="form-group">
                     {{ form.body }}
                 </div>
                 <button type="submit" class="btn btn-outline-primary ml-auto">Comment</button>
             </form>
+            {% else %}
+            <br />
+            <h6>You need to <a href="{% url 'login' %}">Log In</a> to comment.</h6>
+            {% endif %}
         </div>
         <!-- <hr/> -->
         <h3 class="display-6 pt-3">Comments:</h3>
