--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
 {% extends "base.html" %}
+<title>{% block title %}Schedule{% endblock %}</title>
 {% block page_content %}
 <div class="col-md-12">
     <hr>    
