--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
 {% extends "base.html" %}
+<title>{% block title %}Search{% endblock %}</title>
 {% block page_content %}
 <!-- <div class="col-md-8 offset-md-2">
     <div class="input-group">
