--- a/templates/subjectList.html
+++ b/templates/subjectList.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8"/>
 {% extends "base.html" %}
+<title>{% block title %}Courses{% endblock %}</title>
 {% block page_content %}
 <div class="col-md-12">
     <hr>    
         <div class="page-header text-center mt-3">
-            <h1 class="display-4">Subject List</h1>
+            <h1 class="display-4">Course List</h1>
         </div>
     <hr>
     {% for tag in tags %}
